--- a/central-de-erros/netlify.toml
+++ b/central-de-erros/netlify.toml
@@ -1,3 +1,8 @@
+[build]
+  command = "npm run build"
+  publish="central-de-erros/build"
+  base = "central-de-erros"
+
 [[redirects]]
   from = "/*"
   to = "/index.html"
